@@ -6,7 +6,8 @@ Changes for 1.9
 
 Changes for 1.8.3
 
- - [ZBX-1324] replaced more user visible strings ZABBIX with Zabbix (asaveljevs, Richlv)
+ - [ZBX-2612] fixed system.stat showing cpu idle and I/O wait time over 100% on AIX (asaveljevs)
+ - [ZBX-1324] replaced more user visible strings ZABBIX with Zabbix (asaveljevs,Richlv)
  - [ZBX-2616] bundled DejaVu font upgraded from 2.30 to 2.31 (Richlv)
  - [ZBX-2562] improved sessions store (Aly)
  - [ZBXNEXT-424] enhanced status of trigger filter (Vedmak)
